2002-02-20  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h: declare bk_ioh_print{,f}

2002-02-20  Brian Lindauer  <lindauer@sysdetect.com>

	* lib/b_ioh.c: Added b_ioh_print and b_ioh_printf

2002-02-19  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_ioh.c (bk_ioh_fdctl): fcntl F_SETFL takes value, not pointer

2002-02-18  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_relay.c (bk_relay_iohhandler): update to use new coalesce interface.

	* lib/b_ioh.c (bk_ioh_coalesce): New flags to force (on input)
	copies and (on output) to indicate whether a copy had not
	happened. 
	(bk_ioh_coalesce): Do *not* free input vptr (violation of IOH API).

2002-02-11  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_OR): improve doxygenation

	* include/libbk_oscompat.h: undef _CONSTRUCTOR_ATTRIBUTE,_INIT_PRAGMA
	for Insure++ compilation
	
2002-02-11  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_intcols): DOH Some real dumb errors.

2002-02-11  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_string_intcols): fix bugs, spelling errors,
	restrict bases

2002-02-07  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_exec.c (bk_pipe_to_process): possible decriptor leak repair

	* lib/b_string.c (bk_string_intcols): Count columns required for int

2002-01-31  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/Makefile (BK_LARGE_LIB): use ${LIBEXT} for libtool build

2002-01-30  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_oscompat.h (ntohll, htonll): 64-bit host/network order

2002-01-24  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_include.h: control some inclusions from autoconf

	* include/libbk_oscompat.h: autoconf control for sockaddr sa_len
	(BK_INIT_FUN): macro for load-time init
	(AF_LOCAL): define if missing but AF_UNIX exists

	* lib/b_netutils.c (bk_netutils_get_sa_len): use autoconf control

	* lib/b_time.c (bk_time_iso_parse): avoid mktime if it has bugs
